--- a/M2-D2.html
+++ b/M2-D2.html
@@ -56,9 +56,11 @@ HINT: Manage your time in order to finish the structure and responsiveness befor
          */
          body{
              background: rgb(87, 71, 71);
+             background-image: url("https://cdn.hovia.com/app/uploads/Green-Tropical-Plant-Wallpaper-Mural-Plain.jpg");
          }
 
          h2{
+           color: antiquewhite;
            font-size: xxx-large;
            font-weight: bolder;
          }
